<resources>
    <string name="app_name">Floral Haven</string>
    <string name="browse_flowers">Browse Flowers</string>
    <string name="view_cart">View Cart</string>
    <string name="order_history">Order History</string>
    <string name="welcome_user">Welcome!</string>
    <string name="login_welcome">Welcome to Floral Haven\n Please Sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">harutPreferenceFileNameFlower</string>
    <string name="preference_user_id_key">haruflowerPreferenceUserIdKey</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add">Add</string>
    <string name="rose">Rose</string>
    <string name="tulip">Tulip</string>
    <string name="enter_quantity_tulip">Enter quantity</string>
    <string name="add_tulip">Add</string>
    <string name="lily">Lily</string>
    <string name="enter_quantity_lily">Enter quantity</string>
    <string name="add_lily">Add</string>
    <string name="carnation">Carnation</string>
    <string name="enter_quantity_carnation">Enter quantity</string>
    <string name="add_carnation">Add to Shopping Cart</string>
    <string name="go_back">Go Back</string>
    <string name="purchase">Purchase</string>
    <string name="clear_shopping_cart">Clear Shopping Cart</string>
    <string name="floral_haven_nshopping_cart">Floral Haven \nShopping Cart</string>
    <string name="go_back_order">Go Back</string>
    <string name="or">Or</string>
    <string name="signup">SignUp!</string>
    <string name="please_enter_nusername_and_password_to_sign_up">Please Enter \nUsername and Password to Sign Up</string>
    <string name="welcome_to_admin_portal">Welcome to Admin Portal!</string>
    <string name="add_user">Add User!</string>
    <string name="go_back_admin">Go Back</string>
</resources>